# RTSP-Client-FFMPEG-OpenCV-ON-QT

./: .gitignore  CMakeLists.txt  RtspClient.pro  main.cpp
